feat: rework configurations